crates/shell-parser/tests/snapshots/parser_snapshots__compound__until_loop.snap
---
source: tests/parser_snapshots.rs
assertion_line: 142
expression: "parse(\"until false; do echo wait; done\")"
---
Loop {
    kind: Until,
    condition: Simple(
        SimpleCommand {
            assignments: [],
            words: [
                Word {
                    parts: [
                        Literal(
                            "false",
                        ),
                    ],
                },
            ],
            redirections: [],
        },
    ),
    body: Simple(
        SimpleCommand {
            assignments: [],
            words: [
                Word {
                    parts: [
                        Literal(
                            "echo",
                        ),
                    ],
                },
                Word {
                    parts: [
                        Literal(
                            "wait",
                        ),
                    ],
                },
            ],
            redirections: [],
        },
    ),
}
