crates/shell-parser/tests/snapshots/parser_snapshots__compound__while_loop.snap
---
source: tests/parser_snapshots.rs
assertion_line: 137
expression: "parse(\"while read line; do echo $line; done\")"
---
Loop {
    kind: While,
    condition: Simple(
        SimpleCommand {
            assignments: [],
            words: [
                Word {
                    parts: [
                        Literal(
                            "read",
                        ),
                    ],
                },
                Word {
                    parts: [
                        Literal(
                            "line",
                        ),
                    ],
                },
            ],
            redirections: [],
        },
    ),
    body: Simple(
        SimpleCommand {
            assignments: [],
            words: [
                Word {
                    parts: [
                        Literal(
                            "echo",
                        ),
                    ],
                },
                Word {
                    parts: [
                        Parameter(
                            "line",
                        ),
                    ],
                },
            ],
            redirections: [],
        },
    ),
}
